Finished Module 6 Images to Docker Compose
One remaining bug, calling the weather page from the UI throws a NullReferenceException in the Core PollyHelper.AddResilencePolices onRetry.

--- a/Globomantics.Api/Globomantics.Api.csproj
+++ b/Globomantics.Api/Globomantics.Api.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>37e78f75-9802-4a06-a963-3ac3f819a7e2</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
