--- a/Globomantics.Api/appsettings.json
+++ b/Globomantics.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AuthN": {
-    "Authority": "https://localhost:44377",
+    "Authority": "https://id-local.globomantics.com:44395",
     "SwaggerClientId": "globo-swagger",
     "ApiName": "glob_api",
     "AdditionalScopes": "openid profile glob_profile"
