--- a/Globomantics.Core/appsettings.json
+++ b/Globomantics.Core/appsettings.json
@@ -8,7 +8,7 @@
     "ClientSecret": "secret",
     "Scopes": "openid profile glob_profile glob_api offline_access"
   },
-  "ApiBaseUrl": "https://localhost:44376/",
+  "ApiBaseUrl": "https://www-local.globomantics.com:44395/api/",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
