--- a/Globomantics.IdentityServer/appsettings.json
+++ b/Globomantics.IdentityServer/appsettings.json
@@ -8,11 +8,13 @@
     "SmtpPort": 25,
     "SenderAddress": "donotreply@globomantics.com"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     }
   }
 }
