Added SQL Database to Docker Compose
Module 7 completed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,5 +67,18 @@ services:
     networks:
       - globonet
 
+  globosql:
+    build:
+      context: .
+      dockerfile: sql/sql.Dockerfile
+    restart: always
+    ports:
+      - "1440:1433"
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=Sqlc0ntainersFTW!
+    networks:
+      - globonet
+
 networks:
   globonet: {}
