--- a/Globomantics.IdentityServer/appsettings.json
+++ b/Globomantics.IdentityServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "IS4DbConnection": "Server=.;Database=GlobomanticsIdSrv;Integrated Security=true;;MultipleActiveResultSets=true",
-    "GlobomanticsDb": "Server=.;Database=Globomantics;Integrated Security=true;MultipleActiveResultSets=true"
+    "IS4DbConnection": "Server=globosql;Database=GlobomanticsIdSrv;User Id=sa;Password=Sqlc0ntainersFTW!;MultipleActiveResultSets=true",
+    "GlobomanticsDb": "Server=globosql;Database=Globomantics;User Id=globo_dbuser;Password=SqlonLinux?!;MultipleActiveResultSets=true"
   },
   "Email": {
     "SmtpServer": "globosmtp",
